--- a/arch/arm/configs/apq8084_sec_trlte_eur_defconfig
+++ b/arch/arm/configs/apq8084_sec_trlte_eur_defconfig
@@ -15,7 +15,7 @@ CONFIG_MUIC_SUPPORT_SMART_DOCK=y
 CONFIG_MUIC_SUPPORT_QC_CHARGER=y
 CONFIG_MOTOR_DRV_MAX77828=y
 CONFIG_MOTOR_DRV_MAX77843=y
-CONFIG_TACTILE_ASSIST=y
+# CONFIG_TACTILE_ASSIST is not set
 CONFIG_VIBETONZ=y
 CONFIG_LEDS_MAX77828=y
 #
