drivers/cpufreq: add nightmare governor
Signed-off-by: Pafcholini <nadyaivanova14@gmail.com>

--- a/arch/arm/configs/emotion_cm_defconfig
+++ b/arch/arm/configs/emotion_cm_defconfig
@@ -33,7 +33,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="$TOOLCHAIN"
-CONFIG_LOCALVERSION="Emotion-AOSP-Stable"
+CONFIG_LOCALVERSION="-Emotion-AOSP-Stable"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -500,6 +500,7 @@ CONFIG_BT_BCM4358=y
 CONFIG_SEC_THERMISTOR=y
 # CONFIG_SAMSUNG_PRODUCT_SHIP is not set
 CONFIG_MSM_HOTPLUG=y
+CONFIG_INTELLI_HOTPLUG=y
 # CONFIG_PLAT_SPEAR is not set
 
 #
@@ -690,6 +691,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLUACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -701,6 +703,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 CONFIG_CPU_BOOST=y
