--- a/arch/arm/configs/apq8084_sec_defconfig
+++ b/arch/arm/configs/apq8084_sec_defconfig
@@ -52,7 +52,7 @@ CONFIG_MSM_QMI_INTERFACE=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
-CONFIG_MSM_BUSPM_DEV=m
+# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_MSM_BUS_SCALING=y
@@ -736,10 +736,15 @@ CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 CONFIG_CRYPTO_TEST=y
 #CONFIG_CRYPTO_FIPS_INTEG_COPY_ADDRESS=0x20000000
 CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=n
-CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_CRYPTO_ANSI_CPRNG=n
 CONFIG_CRYPTO_FIPS=y
 CONFIG_CRYPTO_SHA512=y
 CONFIG_LOG_BUF_SHIFT=18
+CONFIG_CRYPTO_DRBG_MENU=y
+CONFIG_CRYPTO_DRBG_HMAC=y
+CONFIG_CRYPTO_DRBG_HASH=y
+CONFIG_CRYPTO_DRBG_CTR=y
+CONFIG_CRYPTO_DRBG=y
 #jh43.jung  FIPS Cerified code merge - end
 CONFIG_ARM_ERRATA_754327=y
 
